--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -67,43 +67,7 @@
     position: relative;
   }
 
-  .menu-btn {
-    width: 30px;
-    height: 30px;
-    position: absolute;
-    right: 0;
-    z-index:2;
-    overflow: hidden;
-  }
-  .menu-btn span {
-    width: 30px;
-    height: 2px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #FFFFFF;
-    transition: all 0.5s;
-  }
-  .menu-btn span:nth-of-type(2) {
-    top: calc(50% - 5px);
-  }
-  .menu-btn span:nth-of-type(3) {
-    top: calc(50% + 5px);
-  }
-
-  /* Changing the burger icon when the menu is open */
-  .menu-btn.active span:nth-of-type(1) {
-    display: none;
-  }
-  .menu-btn.active span:nth-of-type(2) {
-    top: 50%;
-    transform: translate(-50%, 0%) rotate(45deg);  
-  }
-  .menu-btn.active span:nth-of-type(3) {
-    top: 50%;
-    transform: translate(-50%, 0%) rotate(-45deg); 
-  }
+  
   .menu {
     display: flex;
     flex-direction: row;
@@ -415,8 +379,8 @@
     width: 19rem;
     height: 3rem;
     border: none;
-    margin-top: 5%;
-    margin-left: 40%;
+    margin: 5% auto;
+
     background: #FE9013;
     border-radius: 25px;
   }
@@ -961,13 +925,52 @@
     }
   
   }
+  @media only screen and (min-width: 320px) and (max-width: 999px){
+    .menu-btn {
+      width: 30px;
+      height: 30px;
+      position: absolute;
+      right: 1%;
+      z-index:2;
+      overflow: hidden;
+    }
+    .menu-btn span {
+      width: 30px;
+      height: 2px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: #FFFFFF;
+      transition: all 0.5s;
+    }
+    .menu-btn span:nth-of-type(2) {
+      top: calc(50% - 5px);
+    }
+    .menu-btn span:nth-of-type(3) {
+      top: calc(50% + 5px);
+    }
+  
+    /* Changing the burger icon when the menu is open */
+    .menu-btn.active span:nth-of-type(1) {
+      display: none;
+    }
+    .menu-btn.active span:nth-of-type(2) {
+      top: 50%;
+      transform: translate(-50%, 0%) rotate(45deg);  
+    }
+    .menu-btn.active span:nth-of-type(3) {
+      top: 50%;
+      transform: translate(-50%, 0%) rotate(-45deg); 
+    }
+  }
   @media only screen and (min-width: 640px) and (max-width: 999px){
     .header{
       min-height: 35px;
     }
-
+    
     .section1 {
-      height: 50vh;
+      height: 60vh;
     }
 
     .nav-item {
@@ -999,6 +1002,9 @@
     }
     .backstage_img{ 
       display: none;
+    }
+    .pick_and_feed{
+      padding: 1%;
     }
 
     .feedbacks{ 
