--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -254,7 +254,7 @@
     display:flex;
     flex-direction: column;
     width: 100%;  
-    height: 100vh;
+    height: 100%;
     position: relative;
   }
 
@@ -264,6 +264,7 @@
     overflow: hidden;
     scroll-behavior: smooth;
     scrollbar-width: none;
+    min-height: 880px;
     }
 
   .animals_cards_container::-webkit-scrollbar {
@@ -274,23 +275,27 @@
     display: grid;
     grid-gap: 3% 3%;
     grid-auto-flow: column;
-    margin: auto;
+    margin: 0 auto 2% auto;
     box-sizing: border-box;
     position:relative;
+    max-width: 1158px;
+    
   }
   
   .galery-item {
-    min-width:300px;
+    min-width:366px;
+    min-height: 426px;
     border: solid 1px #FA6F32;
     border-radius: 5px;
     box-sizing: border-box;
     background-color: white;
     position:relative;
+    transition: all 0.5s;
   }
 
   .galery_img{
     width: 100%;
-    height: 100%;
+    height: 80%;
     object-fit:cover;
   }
 
